--- a/package.json
+++ b/package.json
@@ -1,26 +1,44 @@
 {
-  "name": "phonebook-api",
-  "version": "1.0.0",
-  "description": "Simple REST API with NodeJS and Express",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ."
-  },
-  "author": "Ananias CARVALHO <carvalhoananias@hotmail.com>",
-  "license": "ISC",
+  "name": "bloglist-frontend",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.7",
-    "mongoose-unique-validator": "^2.0.3",
-    "morgan": "^1.10.0"
+    "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.1"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint .",
+    "cypress:open": "cypress open"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "http://localhost:3001",
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "nodemon": "^2.0.2"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "cypress": "^4.4.0",
+    "eslint-plugin-jest": "^23.8.2",
+    "prettier": "2.0.4"
   }
 }
