--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "patientor-backend",
+  "name": "bloglist",
   "version": "1.0.0",
-  "description": "Backend API for a medical record application",
-  "main": "src/index.ts",
+  "description": "Blog list application",
+  "main": "index.js",
   "scripts": {
-    "tsc": "tsc",
-    "dev": "ts-node-dev src/index.ts",
-    "lint": "eslint --ext .ts .",
-    "format": "prettier --write 'src/**/*.ts'",
-    "start": "node build/index.js"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "lint": "eslint .",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
-  "author": "",
+  "author": "Ananias CARVALHO <carvalhoananias@hotmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.6",
-    "@types/uuid": "^7.0.3",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "eslint": "^7.0.0",
-    "prettier": "2.0.5",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.9.2"
+    "eslint": "^6.8.0",
+    "jest": "^25.3.0",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "uuid": "^8.0.0"
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.7",
+    "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.10.0"
   }
 }
