--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "unicafe-redux",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.15",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "apollo-link-context": "^1.0.20",
+    "graphql": "^15.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1",
-    "redux": "^4.0.5"
+    "react-scripts": "3.4.0",
+    "react-select": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,8 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "deep-freeze": "0.0.1"
   }
 }
